@@ -42,6 +42,8 @@ Release 0.20.0 - Unreleased
    HBASE-1167  JSP doesn't work in a git checkout (Nitay Joffe via Andrew
                Purtell)
    HBASE-1178  Add shutdown command to shell
+   HBASE-1184  HColumnDescriptor is too restrictive with family names
+               (Toby White via Andrew Purtell)
 
 Release 0.19.0 - 01/21/2009
   INCOMPATIBLE CHANGES
